--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,8 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
-
+  - jekyll-paginate
+paginate: 10
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
