--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username: Gh0st99
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
   - jekyll-paginate
